--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,23 @@ Django==4.2.7
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 executing==2.0.1
+flake8==7.0.0
+flake8-broken-line==1.0.0
+flake8-isort==6.1.1
+flake8-plugin-utils==1.3.3
+flake8-return==1.2.0
 ipython==8.20.0
 isort==5.12.0
 jedi==0.19.1
 matplotlib-inline==0.1.6
+mccabe==0.7.0
 parso==0.8.3
+pep8-naming==0.13.3
 pillow==10.2.0
 prompt-toolkit==3.0.43
 pure-eval==0.2.2
+pycodestyle==2.11.1
+pyflakes==3.2.0
 Pygments==2.17.2
 PyJWT==2.8.0
 python-dotenv==1.0.0
